shitty comps impl
